1.0.0-rc2
====================

1.0.0-rc1 2005-07-23
====================

 * Fixed error in version parsing which somehow made portal_types disappear.
   [alecm]

 * Enabled swallowResizeExceptions by default and added warning that original
   image resizing destroies the exif information before the data is saved.
   [tiran]
 
 * Fixed spelling error in a security declaration of ATTopic.
   [tiran]

 * Fixed critical migration issue. Locally added roles and locally changed
   permissions are now migrated. Also added unit tests to verify the 
   migration.
   [tiran]

 * Cleanup up unit tests and logging to reduce the noise
   [tiran]

 * Removed 'MakerNote JPEGThumbnail' from the exif tags. Some cameras might
   store the thumbnail in this tag.
   [tiran]

 * Removed unused customization policy including unit test. Plone 2.1 always
   installing ATCT.
   [tiran]

 * Fixed 4330 Inter-version ATCT migration fails to migrate types
   to CMFDynamicViewFTI. Migration to the new FTI is part of the version
   migration again.
   [tiran]
   
 * Added migration step + unit test for '(selected layout)' change.
   [tiran]
   
 * Optimized getRawRelatedItems index addition. There is no need to reindex
   the *whole* catalog when adding a *single* index.
   [tiran]

 * Made the 'view' method aliases point to '(selected layout)' instead of
   '(default view)'. This assures consistency with previous behaviour,
   so that /view at the end of a URL always gets the item itself, ignoring
   any default-page that may be set. Note that the 'view' *action* still
   points to 'string:${object_url}', so that the 'view' tab, as well as
   the '(Default)' target, still get '(dynamic view)' (and thus default
   pages) for types other than File and Image.
   [optilude]

 * Added migration/othermigrator.py for other migrators like CMFPhoto and
   CMFPhotoAlbum. These migrators are written but not yet available to end
   users. Some glue code needs to be written.
   [tiran]
